--- a/action.yml
+++ b/action.yml
@@ -37,16 +37,15 @@ runs:
         
         # Build authentication header if token is provided
         if [ -n "${{ inputs.github-token }}" ]; then
-          AUTH_HEADER="-H \"Authorization: Bearer ${{ inputs.github-token }}\""
           echo "Using authenticated GitHub API requests for improved rate limits"
+          PACKAGE_URL=$(curl -H "Authorization: Bearer ${{ inputs.github-token }}" "$URL" | jq -r '[ .assets[] | select(.name | test("gcov2lcov.*linux.amd64.tar.gz")) | .browser_download_url ] | first ')
         else
-          AUTH_HEADER=""
           echo "Using unauthenticated GitHub API requests"
+          PACKAGE_URL=$(curl "$URL" | jq -r '[ .assets[] | select(.name | test("gcov2lcov.*linux.amd64.tar.gz")) | .browser_download_url ] | first ')
         fi
         
         # starting with version v1.1.0 gcov2lcov changed it's artefact naming a bit.
         # we are gentle and support also the old naming convetion
-        PACKAGE_URL=$(curl ${AUTH_HEADER} "$URL" | jq -r '[ .assets[] | select(.name | test("gcov2lcov.*linux.amd64.tar.gz")) | .browser_download_url ] | first ')
         curl -sLf "$PACKAGE_URL" | tar zxf -
         mv bin/gcov2lcov-linux-amd64 gcov2lcov > /dev/null 2>&1 || true  # before v1.1.0
 
