make evidence workflow trigger on push

--- a/.github/workflows/evidence-test.yml
+++ b/.github/workflows/evidence-test.yml
@@ -2,6 +2,8 @@ name: Evidence - Rate Limit Comparison
 
 on:
   workflow_dispatch:
+  push:
+    branches: [ evidence-capture ]
 
 jobs:
   test-authenticated:
